monitoring/istio_gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: dev-gateway
  namespace: dev
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: dev-vs
  namespace: dev
spec:
  hosts:
  - "*"
  gateways:
  - dev-gateway
  http:
  - route:
    - destination:
        host: apigatewayservice-service
        port:
          number: 8080
